--- a/src/projects/rentACar/rentACar.Persistence/rentACar.Persistence.csproj
+++ b/src/projects/rentACar/rentACar.Persistence/rentACar.Persistence.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\corePackages\Core.Persistence\Core.Persistence.csproj" />
+    <ProjectReference Include="..\rentACar.Application\rentACar.Application.csproj" />
     <ProjectReference Include="..\rentACar.Domain\rentACar.Domain.csproj" />
   </ItemGroup>
 
