--- a/src/corePackages/Core.Mailing/Core.Mailing.csproj
+++ b/src/corePackages/Core.Mailing/Core.Mailing.csproj
@@ -6,4 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MailKit" Version="3.3.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
+    <PackageReference Include="MimeKit" Version="3.4.0" />
+  </ItemGroup>
+
 </Project>
