--- a/src/corePackages/Core.Security/Core.Security.csproj
+++ b/src/corePackages/Core.Security/Core.Security.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.8.0" />
     <PackageReference Include="Otp.NET" Version="1.2.2" />
   </ItemGroup>
 
