--- a/src/corePackages/Core.ElasticSearch/Core.ElasticSearch.csproj
+++ b/src/corePackages/Core.ElasticSearch/Core.ElasticSearch.csproj
@@ -6,4 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Elasticsearch.Net" Version="7.17.4" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
+    <PackageReference Include="NEST" Version="7.17.4" />
+    <PackageReference Include="NEST.JsonNetSerializer" Version="7.17.4" />
+  </ItemGroup>
+
 </Project>
