--- a/src/projects/rentACar/rentACar.Application/rentACar.Application.csproj
+++ b/src/projects/rentACar/rentACar.Application/rentACar.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\corePackages\Core.Application\Core.Application.csproj" />
+    <ProjectReference Include="..\..\..\corePackages\Core.Integration\Core.Integration\Core.Integration.csproj" />
     <ProjectReference Include="..\rentACar.Domain\rentACar.Domain.csproj" />
   </ItemGroup>
 
