Redis Cache Adding
Redis Cache Adding

--- a/src/projects/rentACar/rentACar.WebAPI/appsettings.json
+++ b/src/projects/rentACar/rentACar.WebAPI/appsettings.json
@@ -8,5 +8,8 @@
   "ConnectionStrings": {
     "RentACarConnectionString": "Server=EMRECAN;Database=RentACarDb; Trusted_Connection=True;"
   },
+  "CacheSettings": {
+    "SlidingExpiration": 1
+  },
   "AllowedHosts": "*"
 }
