--- a/src/projects/rentACar/rentACar.WebAPI/prometheus.yml
+++ b/src/projects/rentACar/rentACar.WebAPI/prometheus.yml
@@ -6,4 +6,4 @@ scrape_configs:
     # scheme defaults to 'http'.
 
     static_configs:
-      - targets: ["localhost:5252"]
+      - targets: ["host.docker.internal:5252"]
