--- a/src/projects/rentACar/rentACar.Application/rentACar.Application.csproj
+++ b/src/projects/rentACar/rentACar.Application/rentACar.Application.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <Folder Include="Features\Brands\Constants\" />
+    <Folder Include="Features\Models\" />
   </ItemGroup>
 
   <ItemGroup>
