--- a/src/corePackages/Core.CrossCuttingConcerns/Core.CrossCuttingConcerns.csproj
+++ b/src/corePackages/Core.CrossCuttingConcerns/Core.CrossCuttingConcerns.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Core.Persistence\Core.Persistence.csproj" />
+  </ItemGroup>
+
 </Project>
