Mapper Helper Added
Mapper Helper Added

--- a/src/projects/rentACar/rentACar.WebAPI/appsettings.json
+++ b/src/projects/rentACar/rentACar.WebAPI/appsettings.json
@@ -8,6 +8,11 @@
   "ConnectionStrings": {
     "RentACarConnectionString": "Server=EMRECAN;Database=RentACarDb; Trusted_Connection=True;"
   },
+  "LogDatabaseSettings": {
+    "LogCollectionName": "Logs",
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "LogDb"
+  },
   "CacheSettings": {
     "SlidingExpiration": 1
   },
