--- a/src/projects/rentACar/rentACar.WebAPI/appsettings.json
+++ b/src/projects/rentACar/rentACar.WebAPI/appsettings.json
@@ -16,5 +16,10 @@
   "CacheSettings": {
     "SlidingExpiration": 1
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "WebRootPath": "C:\\inetpub\\RentACarFiles",
+  "WebApiDomain": "http://api.rentacar.com",
+  "WebSiteDomain": "http://rentacar.com",
+  "WebApiAdminDomain": "http://api.adminrentacar.com",
+  "WebSiteAdminDomain": "http://admin.rentacar.com"
 }
