Document Upload Pool Added

--- a/src/projects/rentACar/rentACar.WebAPI/rentACar.WebAPI.csproj
+++ b/src/projects/rentACar/rentACar.WebAPI/rentACar.WebAPI.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\rentACar.Persistence\rentACar.Persistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
