--- a/src/projects/rentACar/rentACar.Application/rentACar.Application.csproj
+++ b/src/projects/rentACar/rentACar.Application/rentACar.Application.csproj
@@ -13,6 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Features\Auths\Models\" />
+    <Folder Include="Features\Auths\Constants\" />
+    <Folder Include="Features\Auths\Queries\" />
+    <Folder Include="Features\Auths\Profiles\" />
     <Folder Include="Features\BrandDocuments\Constants\" />
     <Folder Include="Features\BrandDocuments\Models\" />
     <Folder Include="Features\BrandDocuments\Profiles\" />
