AddJwtBearer and Swagger configuration was done.

--- a/src/projects/rentACar/rentACar.WebAPI/appsettings.json
+++ b/src/projects/rentACar/rentACar.WebAPI/appsettings.json
@@ -16,6 +16,13 @@
   "CacheSettings": {
     "SlidingExpiration": 1
   },
+  "TokenOptions": {
+    "Audience": "rentacar@rentacar.com",
+    "Issuer": "rentacar@rentacar.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "strongandsecretkeystrongandsecretkey",
+    "RefreshTokenTTL": 2
+  },
   "AllowedHosts": "*",
   "WebRootPath": "C:\\inetpub\\RentACarFiles",
   "WebApiDomain": "http://api.rentacar.com",
