Added LoggerService and ILoggableRequest (SeriLog)

--- a/src/projects/rentACar/rentACar.WebAPI/appsettings.json
+++ b/src/projects/rentACar/rentACar.WebAPI/appsettings.json
@@ -23,6 +23,12 @@
     "SecurityKey": "strongandsecretkeystrongandsecretkey",
     "RefreshTokenTTL": 2
   },
+  "SeriLogConfigurations": {
+    "FileLogConfiguration": {
+      "FolderPath": "/logs/"
+    }
+
+  },
   "AllowedHosts": "*",
   "WebRootPath": "C:\\inetpub\\RentACarFiles",
   "WebApiDomain": "http://api.rentacar.com",
