Create Login Method

--- a/src/projects/rentACar/rentACar.WebAPI/appsettings.json
+++ b/src/projects/rentACar/rentACar.WebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "WebAPIConfiguration": {
+    "APIDomain": "http://localhost:5252/api"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
