Update Mailing Project

--- a/src/projects/rentACar/rentACar.WebAPI/appsettings.json
+++ b/src/projects/rentACar/rentACar.WebAPI/appsettings.json
@@ -8,6 +8,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "MailSettings": {
+    "Server": "smtp.office365.com",
+    "Port": 587,
+    "SenderFullName": "Clean Architecture",
+    "SenderEmail": "cleanarchitecture@outlook.com.tr",
+    "UserName": "cleanarchitecture",
+    "Password": "QazwsX852",
+    "AuthenticationRequired": false
+  },
   "ConnectionStrings": {
     "RentACarConnectionString": "Server=EMRECAN;Database=RentACarDb; Trusted_Connection=True;"
   },
@@ -39,3 +48,4 @@
   "WebApiAdminDomain": "http://api.adminrentacar.com",
   "WebSiteAdminDomain": "http://admin.rentacar.com"
 }
+
