--- a/src/projects/rentACar/rentACar.WebAPI/appsettings.json
+++ b/src/projects/rentACar/rentACar.WebAPI/appsettings.json
@@ -9,13 +9,13 @@
     }
   },
   "MailSettings": {
-    "Server": "smtp.office365.com",
+    "Server": "smtp-mail.outlook.com",
     "Port": 587,
     "SenderFullName": "Clean Architecture",
-    "SenderEmail": "cleanarchitecture@outlook.com.tr",
-    "UserName": "cleanarchitecture",
+    "SenderEmail": "",
+    "UserName": "cleanarchitecture@outlook.com.tr",
     "Password": "QazwsX852",
-    "AuthenticationRequired": false
+    "AuthenticationRequired": true
   },
   "ConnectionStrings": {
     "RentACarConnectionString": "Server=EMRECAN;Database=RentACarDb; Trusted_Connection=True;"
@@ -48,4 +48,3 @@
   "WebApiAdminDomain": "http://api.adminrentacar.com",
   "WebSiteAdminDomain": "http://admin.rentacar.com"
 }
-
