--- a/src/projects/rentACar/rentACar.WebAPI/appsettings.json
+++ b/src/projects/rentACar/rentACar.WebAPI/appsettings.json
@@ -9,12 +9,12 @@
     }
   },
   "MailSettings": {
-    "Server": "smtp-mail.outlook.com",
+    "Server": "smtp.office365.com",
     "Port": 587,
     "SenderFullName": "Clean Architecture",
-    "SenderEmail": "",
-    "UserName": "cleanarchitecture@outlook.com.tr",
-    "Password": "QazwsX852",
+    "SenderEmail": "clean.architecture@hotmail.com",
+    "UserName": "clean.architecture@hotmail.com",
+    "Password": "QazwsX852.",
     "AuthenticationRequired": true
   },
   "ConnectionStrings": {
