--- a/tests/Application.Tests/Application.Tests.csproj
+++ b/tests/Application.Tests/Application.Tests.csproj
@@ -25,8 +25,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\corePackages\Core.Test\Core.Test.csproj" />
-    <ProjectReference Include="..\src\projects\rentACar\rentACar.Application\rentACar.Application.csproj" />
+    <ProjectReference Include="..\..\src\corePackages\Core.Test\Core.Test.csproj" />
+    <ProjectReference Include="..\..\src\projects\rentACar\rentACar.Application\rentACar.Application.csproj" />
   </ItemGroup>
 
 </Project>
