--- a/src/projects/rentACar/rentACar.WebAPI/appsettings.json
+++ b/src/projects/rentACar/rentACar.WebAPI/appsettings.json
@@ -42,6 +42,11 @@
 
   },
   "AllowedHosts": "*",
+  "CloudinaryAccount": {
+    "Cloud": "dzoc0dmdm",
+    "ApiKey": "856683416797286",
+    "ApiSecret": "sUXWap2Q4ahemBPUBGIO6k3V37Y"
+  },
   "WebRootPath": "C:\\inetpub\\RentACarFiles",
   "WebApiDomain": "http://api.rentacar.com",
   "WebSiteDomain": "http://rentacar.com",
