--- a/src/projects/rentACar/rentACar.WebAPI/rentACar.WebAPI.csproj
+++ b/src/projects/rentACar/rentACar.WebAPI/rentACar.WebAPI.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\rentACar.Infrastructure\rentACar.Infrastructure.csproj" />
     <ProjectReference Include="..\rentACar.Persistence\rentACar.Persistence.csproj" />
   </ItemGroup>
 
