--- a/src/projects/rentACar/rentACar.Persistence/rentACar.Persistence.csproj
+++ b/src/projects/rentACar/rentACar.Persistence/rentACar.Persistence.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\corePackages\Core.BackgroundJob\Core.BackgroundJob.csproj" />
     <ProjectReference Include="..\..\..\corePackages\Core.Persistence\Core.Persistence.csproj" />
     <ProjectReference Include="..\rentACar.Application\rentACar.Application.csproj" />
     <ProjectReference Include="..\rentACar.Domain\rentACar.Domain.csproj" />
