--- a/src/projects/rentACar/rentACar.WebAPI/appsettings.json
+++ b/src/projects/rentACar/rentACar.WebAPI/appsettings.json
@@ -18,7 +18,8 @@
     "AuthenticationRequired": true
   },
   "ConnectionStrings": {
-    "RentACarConnectionString": "Server=EMRECAN;Database=RentACarDb; Trusted_Connection=True;"
+    "RentACarConnectionString": "Server=EMRECAN;Database=RentACarDb; Trusted_Connection=True;",
+    "HangfireDev": "Server=EMRECAN;Database=RentACarHangFireDb; Trusted_Connection=True;"
   },
   "LogDatabaseSettings": {
     "LogCollectionName": "Logs",
@@ -40,6 +41,10 @@
       "FolderPath": "/logs/"
     }
 
+  },
+  "HangfireSettings": {
+    "UserName": "admin",
+    "Password": "123456"
   },
   "AllowedHosts": "*",
   "CloudinaryAccount": {
