Domain and Localization structures were created. General bugs fixed.

--- a/src/corePackages/Core.Persistence/Core.Persistence.csproj
+++ b/src/corePackages/Core.Persistence/Core.Persistence.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.19" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Core.Domain\Core.Domain.csproj" />
+	<ProjectReference Include="..\Core.Helpers\Core.Helpers.csproj" />
+  </ItemGroup>
+
 </Project>
