--- a/src/projects/rentACar/rentACar.WebAPI/appsettings.Development.json
+++ b/src/projects/rentACar/rentACar.WebAPI/appsettings.Development.json
@@ -1,8 +1,60 @@
 {
+  "WebAPIConfiguration": {
+    "APIDomain": "http://localhost:5252/api"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "MailSettings": {
+    "Server": "smtp.office365.com",
+    "Port": 587,
+    "SenderFullName": "Clean Architecture",
+    "SenderEmail": "clean.architecture@hotmail.com",
+    "UserName": "clean.architecture@hotmail.com",
+    "Password": "QazwsX852.",
+    "AuthenticationRequired": true
+  },
+  "ConnectionStrings": {
+    "RentACarConnectionString": "Server=EMRECAN;Database=RentACarDb; Trusted_Connection=True;",
+    "HangfireDev": "Server=EMRECAN;Database=RentACarHangFireDb; Trusted_Connection=True;"
+  },
+  "LogDatabaseSettings": {
+    "LogCollectionName": "Logs",
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "LogDb"
+  },
+  "CacheSettings": {
+    "SlidingExpiration": 1
+  },
+  "TokenOptions": {
+    "Audience": "rentacar@rentacar.com",
+    "Issuer": "rentacar@rentacar.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "strongandsecretkeystrongandsecretkey",
+    "RefreshTokenTTL": 2
+  },
+  "SeriLogConfigurations": {
+    "FileLogConfiguration": {
+      "FolderPath": "/logs/"
+    }
+
+  },
+  "HangfireSettings": {
+    "UserName": "admin",
+    "Password": "123456"
+  },
+  "AllowedHosts": "*",
+  "CloudinaryAccount": {
+    "Cloud": "dzoc0dmdm",
+    "ApiKey": "856683416797286",
+    "ApiSecret": "sUXWap2Q4ahemBPUBGIO6k3V37Y"
+  },
+  "WebRootPath": "C:\\inetpub\\RentACarFiles",
+  "WebApiDomain": "http://api.rentacar.com",
+  "WebSiteDomain": "http://rentacar.com",
+  "WebApiAdminDomain": "http://api.adminrentacar.com",
+  "WebSiteAdminDomain": "http://admin.rentacar.com"
 }
