The Utilities layer has been created, and there are general settings for project information and a general helper structure for rabbitmq.

--- a/src/projects/rentACar/rentACar.WebAPI/rentACar.WebAPI.csproj
+++ b/src/projects/rentACar/rentACar.WebAPI/rentACar.WebAPI.csproj
@@ -28,6 +28,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\corePackages\Core.BackgroundJob\Core.BackgroundJob.csproj" />
+    <ProjectReference Include="..\..\..\corePackages\Core.Utilities\Core.Utilities.csproj" />
     <ProjectReference Include="..\rentACar.Infrastructure\rentACar.Infrastructure.csproj" />
     <ProjectReference Include="..\rentACar.Persistence\rentACar.Persistence.csproj" />
   </ItemGroup>
