--- a/src/corePackages/Core.CrossCuttingConcerns/Core.CrossCuttingConcerns.csproj
+++ b/src/corePackages/Core.CrossCuttingConcerns/Core.CrossCuttingConcerns.csproj
@@ -7,20 +7,22 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation" Version="11.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
-    <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="2.2.1" />
-    <PackageReference Include="MongoDB.Driver" Version="2.17.1" />
-    <PackageReference Include="Serilog" Version="2.11.0" />
-    <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="8.4.1" />
-    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
-    <PackageReference Include="Serilog.Sinks.Graylog" Version="2.3.0" />
-    <PackageReference Include="Serilog.Sinks.MongoDB" Version="5.1.5" />
-    <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="5.8.0" />
-    <PackageReference Include="Serilog.Sinks.PostgreSQL" Version="2.3.0" />
-    <PackageReference Include="Serilog.Sinks.RabbitMQ" Version="6.0.0" />
+	  <PackageReference Include="FluentValidation" Version="11.5.1" />
+	  <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
+	  <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.4" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
+	  <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="2.3.2" />
+	  <PackageReference Include="MongoDB.Driver" Version="2.19.0" />
+	  <PackageReference Include="Serilog" Version="2.12.0" />
+	  <PackageReference Include="Serilog.Sinks.Elasticsearch" Version="9.0.0" />
+	  <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+	  <PackageReference Include="Serilog.Sinks.Graylog" Version="2.3.0" />
+	  <PackageReference Include="Serilog.Sinks.MongoDB" Version="5.3.1" />
+	  <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="6.2.0" />
+	  <PackageReference Include="Serilog.Sinks.PostgreSQL" Version="2.3.0" />
+	  <PackageReference Include="Serilog.Sinks.RabbitMQ" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
