--- a/src/projects/rentACar/rentACar.WebAPI/appsettings.json
+++ b/src/projects/rentACar/rentACar.WebAPI/appsettings.json
@@ -2,6 +2,13 @@
   "WebAPIConfiguration": {
     "APIDomain": "http://localhost:5252/api"
   },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://+:5000"
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
